create draft archive functionality, update swagger for post api/drafts/archive/id
